# beaver-lang

./: .gitignore  CMakeLists.txt  README.md  lexer.hpp  main  main.cpp  parser.hpp  syntaxtree.hpp  test.txt
scripts/: format.sh  linux_deps.sh  mac_deps.sh
src/: codegen.hpp  generator.cpp  generator.hpp  jit.cpp  jit.hpp  lexer.cpp  lexer.hpp  main.cpp  operations.cpp  operations.h  operations.hpp  parser.cpp  parser.hpp  syntaxtree.cpp  syntaxtree.hpp
